@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -62,8 +62,8 @@ import org.jkiss.utils.IOUtils;
 
 import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Path;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 
 /**
  * SQL task settings page
@@ -106,7 +106,9 @@ class SQLScriptTaskPageSettings extends ActiveWizardPage<SQLScriptTaskConfigurat
         DBNProject projectNode = project.getNavigatorModel().getRoot().getProjectNode(project);
 
         {
-            Composite filesGroup = UIUtils.createControlGroup(mainGroup, DTMessages.sql_script_task_page_settings_group_files, 2, GridData.FILL_BOTH, 0);
+            Composite filesGroup = UIUtils.createComposite(mainGroup, 2);
+            filesGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
+            UIUtils.createControlLabel(filesGroup, DTMessages.sql_script_task_page_settings_group_files, 2);
 
             scriptsViewer = new TableViewer(filesGroup, SWT.BORDER | SWT.MULTI | SWT.FULL_SELECTION);
             scriptsViewer.setContentProvider(new ListContentProvider());
@@ -184,7 +186,7 @@ class SQLScriptTaskPageSettings extends ActiveWizardPage<SQLScriptTaskConfigurat
                     SelectionListener.widgetSelectedAdapter(e -> {
                             int selectionIndex = scriptTable.getSelectionIndex();
                             DBNNode nextScript = selectionIndex < 0 || selectionIndex >= selectedScripts.size() ?
-                                (selectedScripts.isEmpty() ? null : selectedScripts.get(0)) : selectedScripts.get(selectionIndex);
+                                (selectedScripts.isEmpty() ? null : selectedScripts.getFirst()) : selectedScripts.get(selectionIndex);
 
                             DBNPathBase selected = DBWorkbench.getPlatformUI().openFileSystemSelector(
                                 UIMessages.text_with_open_dialog_browse_remote,
@@ -257,12 +259,12 @@ class SQLScriptTaskPageSettings extends ActiveWizardPage<SQLScriptTaskConfigurat
         }
 
         {
-            Composite connectionsGroup = UIUtils.createControlGroup(
+            Composite connectionsGroup = UIUtils.createComposite(
                 mainGroup,
-                DTMessages.sql_script_task_page_settings_group_connections,
-                2,
-                GridData.FILL_BOTH,
-                0);
+                2);
+            connectionsGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
+            UIUtils.createControlLabel(connectionsGroup, DTMessages.sql_script_task_page_settings_group_connections, 2);
+
 
             dataSourceViewer = new TableViewer(connectionsGroup, SWT.BORDER | SWT.MULTI | SWT.FULL_SELECTION);
             dataSourceViewer.setContentProvider(new ListContentProvider());
@@ -358,20 +360,25 @@ class SQLScriptTaskPageSettings extends ActiveWizardPage<SQLScriptTaskConfigurat
             });
             deleteItem.setEnabled(false);
         }
-        mainGroup.setWeights(700, 300);
+        mainGroup.setWeights(600, 400);
 
         {
-            Composite settingsGroup = UIUtils.createControlGroup(
+            Composite settingsGroup = UIUtils.createTitledComposite(
                 composite,
                 DTMessages.sql_script_task_page_settings_group_script,
                 3,
-                GridData.FILL_HORIZONTAL | GridData.VERTICAL_ALIGN_BEGINNING,
-                0
+                GridData.FILL_HORIZONTAL | GridData.VERTICAL_ALIGN_BEGINNING
             );
 
             ignoreErrorsCheck = UIUtils.createCheckbox(settingsGroup, DTMessages.sql_script_task_page_settings_option_ignore_errors, "", dtSettings.isIgnoreErrors(), 1);
             dumpQueryCheck = UIUtils.createCheckbox(settingsGroup, DTMessages.sql_script_task_page_settings_option_dump_results, "", dtSettings.isDumpQueryResultsToLog(), 1);
-            autoCommitCheck = UIUtils.createCheckbox(settingsGroup, DTMessages.sql_script_task_page_settings_option_auto_commit, "", dtSettings.isAutoCommit(), 1);
+            autoCommitCheck = UIUtils.createCheckbox(
+                settingsGroup,
+                DTMessages.sql_script_task_page_settings_option_auto_commit,
+                DTMessages.sql_script_task_page_settings_option_auto_commit_tip,
+                dtSettings.isAutoCommit(),
+                1
+            );
         }
 
         getWizard().createVariablesEditButton(composite);
@@ -470,27 +477,30 @@ class SQLScriptTaskPageSettings extends ActiveWizardPage<SQLScriptTaskConfigurat
             List<String> scriptFiles = settings.getScriptFiles();
             for (String filePath : scriptFiles) {
                 if (IOUtils.isLocalFile(filePath)) {
-                    Path workspaceFile;
-                    RMControllerProvider rmControllerProvider = DBUtils.getAdapter(RMControllerProvider.class, project);
-                    try {
-                        if (rmControllerProvider != null) {
-                            workspaceFile = project.getAbsolutePath().resolve(filePath);
-                        } else {
-                            workspaceFile = DTUtils.findProjectFile(project, filePath);
+                    DBNNode resource = projectNode.findNodeByRelativePath(monitor, filePath);
+                    if (resource == null) {
+                        Path workspaceFile;
+                        RMControllerProvider rmControllerProvider = DBUtils.getAdapter(RMControllerProvider.class, project);
+                        try {
+                            if (rmControllerProvider != null) {
+                                workspaceFile = project.getAbsolutePath().resolve(filePath);
+                            } else {
+                                workspaceFile = DTUtils.findProjectFile(project, filePath);
+                            }
+                        } catch (Exception e) {
+                            log.error(e);
+                            continue;
                         }
-                    } catch (Exception e) {
-                        log.error(e);
-                        continue;
+                        if (workspaceFile != null) {
+                            resource = projectNode.findResource(monitor, workspaceFile);
+                        }
                     }
-                    if (workspaceFile == null) {
+                    if (resource == null) {
                         UIUtils.syncExec(() -> setMessage("Script file '" + filePath + "' not found", WARNING));
                         log.error("Script file '" + filePath + "' not found");
                         continue;
                     }
-                    DBNNode resource = projectNode.findResource(monitor, workspaceFile);
-                    if (resource != null) {
-                        selectedScripts.add(resource);
-                    }
+                    selectedScripts.add(resource);
                 } else {
                     DBNFileSystems fsNode = projectNode.getExtraNode(DBNFileSystems.class);
                     if (fsNode != null) {
