@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,12 +20,11 @@ import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
-import org.jkiss.dbeaver.model.DBPObject;
 import org.jkiss.dbeaver.model.app.DBPProject;
 import org.jkiss.dbeaver.model.data.json.JSONUtils;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.DBRRunnableContext;
-import org.jkiss.dbeaver.model.runtime.DBRRunnableWithResult;
+import org.jkiss.dbeaver.model.runtime.DBRRunnableWithReturn;
 import org.jkiss.dbeaver.model.runtime.MonitorRunnableContext;
 import org.jkiss.dbeaver.model.struct.DBSEntity;
 import org.jkiss.dbeaver.model.struct.DBSObject;
@@ -41,17 +40,16 @@ import org.jkiss.dbeaver.tools.transfer.registry.DataTransferNodeDescriptor;
 import org.jkiss.dbeaver.tools.transfer.registry.DataTransferProcessorDescriptor;
 import org.jkiss.dbeaver.tools.transfer.registry.DataTransferRegistry;
 import org.jkiss.dbeaver.tools.transfer.serialize.SerializerContext;
-import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * DataTransferSettings
  */
-public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
+public class DataTransferSettings implements DBTTaskSettings {
     private static final Log log = Log.getLog(DataTransferSettings.class);
 
     public static final int DEFAULT_THREADS_NUM = 1;
@@ -91,7 +89,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
     // if it's not required -- e.g., when we're editing an exiting task
     private final boolean nodeUpdateRestricted;
     // New hacky flag. Helps to understand - do the task running already? Or are we just checking task settings?
-    private boolean isTaskRunning;
+    private final boolean isTaskRunning;
 
     public DataTransferSettings(
         @Nullable Collection<? extends IDataTransferProducer> producers,
@@ -101,8 +99,8 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         boolean selectDefaultNodes,
         boolean isExport,
         boolean isExitingTask,
-        boolean isTaskRunning)
-    {
+        boolean isTaskRunning
+    ) {
         this(producers,
             consumers,
             null,
@@ -123,8 +121,8 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         boolean selectDefaultNodes,
         boolean isExport,
         boolean isExitingTask,
-        boolean isTaskRunning)
-    {
+        boolean isTaskRunning
+    ) {
         this.state = state;
         this.nodeUpdateRestricted = isExitingTask;
         this.configurationMap = configuration;
@@ -147,7 +145,8 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         @NotNull Log taskLog,
         @NotNull Map<String, Object> configuration,
         @NotNull DataTransferState state,
-        boolean isTaskRunning) {
+        boolean isTaskRunning
+    ) {
         this(
             getNodesFromLocation(monitor, task, state, taskLog, "producers", IDataTransferProducer.class),
             getNodesFromLocation(monitor, task, state, taskLog, "consumers", IDataTransferConsumer.class),
@@ -208,14 +207,16 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
     }
 
     @NotNull
-    public static DataTransferSettings loadSettings(DBRRunnableWithResult<DataTransferSettings> loader) throws DBException {
-        // Wait 1 minute maximum
-        RuntimeUtils.runTask(loader, "Load data transfer settings", 60000, false);
-        DataTransferSettings settings = loader.getResult();
-        if (settings == null) {
-            throw new DBException("Timeout while loading data transfer settings");
+    public static DataTransferSettings loadSettings(
+        @NotNull DBRRunnableWithReturn<DataTransferSettings> loader
+    ) throws DBException {
+        try {
+            return DBWorkbench.getPlatformUI().runWithProgress(loader);
+        } catch (InvocationTargetException e) {
+            throw new DBException("Error loading settings", e.getTargetException());
+        } catch (InterruptedException e) {
+            throw new DBException("Settings load interrupted", e);
         }
-        return settings;
     }
 
     private void initializePipes(
@@ -268,7 +269,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
                 dataPipes.add(new DataTransferPipe(source, null));
             }
             // Set default producer
-            Class<? extends IDataTransferProducer> producerType = dataPipes.get(0).getProducer().getClass();
+            Class<? extends IDataTransferProducer> producerType = dataPipes.getFirst().getProducer().getClass();
             DataTransferNodeDescriptor producerDesc = registry.getNodeByType(producerType);
             if (producerDesc != null) {
                 selectProducer(producerDesc);
@@ -283,7 +284,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
                 dataPipes.add(new DataTransferPipe(null, target));
             }
             // Set default consumer
-            Class<? extends IDataTransferConsumer> consumerType = dataPipes.get(0).getConsumer().getClass();
+            Class<? extends IDataTransferConsumer> consumerType = dataPipes.getFirst().getConsumer().getClass();
             DataTransferNodeDescriptor consumerDesc = registry.getNodeByType(consumerType);
             if (consumerDesc != null) {
                 selectConsumer(consumerDesc, null, false);
@@ -309,7 +310,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         }
     }
 
-    public void loadSettings(Map<String, Object> config) {
+    public void loadSettings(@NotNull Map<String, Object> config) {
         this.setMaxJobCount(CommonUtils.toInt(config.get("maxJobCount"), DataTransferSettings.DEFAULT_THREADS_NUM));
         this.setShowFinalMessage(CommonUtils.getBoolean(config.get("showFinalMessage"), this.isShowFinalMessage()));
 
@@ -318,7 +319,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
             // Restore consumer/producer from saved configuration
             // Do this only if consumer/producer weren't set explicitly
             {
-                String consumerId = CommonUtils.toString(config.get("consumer"));
+                String consumerId = CommonUtils.toString(config.get(DTConstants.PROP_CONSUMER_TYPE));
                 if (!CommonUtils.isEmpty(consumerId)) {
                     DataTransferNodeDescriptor consumerNode = DataTransferRegistry.getInstance().getNodeById(consumerId);
 
@@ -342,7 +343,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
                 }
             }
             {
-                String producerId = CommonUtils.toString(config.get("producer"));
+                String producerId = CommonUtils.toString(config.get(DTConstants.PROP_PRODUCER_TYPE));
                 if (!CommonUtils.isEmpty(producerId)) {
                     DataTransferNodeDescriptor producerNode = DataTransferRegistry.getInstance().getNodeById(producerId);
                     // Check that this producer is allowed
@@ -369,7 +370,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
 
         DataTransferProcessorDescriptor savedProcessor = null;
         if (processorNode != null) {
-            String processorId = CommonUtils.toString(config.get("processor"));
+            String processorId = CommonUtils.toString(config.get(DTConstants.PROP_PROCESSOR_TYPE));
             if (!CommonUtils.isEmpty(processorId)) {
                 savedProcessor = processorNode.getProcessor(processorId);
                 if (savedProcessor == null) {
@@ -391,10 +392,13 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         }
 
         // Load processor properties
-        Map<String, Object> processorsSection = JSONUtils.getObject(config, "processors");
+        Map<String, Object> processorsSection = JSONUtils.getObject(config, DTConstants.PROP_PROCESSORS_LIST);
         {
             for (Map.Entry<String, Object> procIter : processorsSection.entrySet()) {
-                Map<String, Object> procSection = (Map<String, Object>) procIter.getValue();
+                if (!(procIter.getValue() instanceof Map<?, ?> ps)) {
+                    continue;
+                }
+                Map<String, Object> procSection = (Map<String, Object>) ps;
                 String processorId = procIter.getKey();
                 String nodeId = CommonUtils.toString(procSection.get("@node"));
                 if (CommonUtils.isEmpty(nodeId)) {
@@ -405,7 +409,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
                         processorId = processorId.substring(divPos + 1);
                     }
                 }
-                String propNamesId = CommonUtils.toString(procSection.get("@propNames"));
+                String propNamesId = CommonUtils.toString(procSection.get(DTConstants.PROP_NAME));
                 DataTransferNodeDescriptor node = DataTransferRegistry.getInstance().getNodeById(nodeId);
                 if (node != null) {
                     Map<String, Object> props = new HashMap<>();
@@ -425,7 +429,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         return nodeSettingsLoaded;
     }
 
-    public void loadNodeSettings(DBRProgressMonitor monitor) {
+    public void loadNodeSettings(@NotNull DBRProgressMonitor monitor) {
         if (nodeSettingsLoaded) {
             return;
         }
@@ -470,6 +474,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         return producerOptional;
     }
 
+    @Nullable
     public IDataTransferProducer<?>[] getInitProducers() {
         return initProducers;
     }
@@ -479,6 +484,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         return initConsumers;
     }
 
+    @NotNull
     public List<DBSObject> getSourceObjects() {
         return initObjects;
     }
@@ -489,7 +495,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
     }
 
     @Nullable
-    public IDataTransferSettings getNodeSettings(DataTransferNodeDescriptor node) {
+    public IDataTransferSettings getNodeSettings(@NotNull DataTransferNodeDescriptor node) {
         IDataTransferSettings settings = nodeSettings.get(node);
         if (settings == null) {
             try {
@@ -504,7 +510,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
     }
 
     @NotNull
-    public IDataTransferSettings getNodeSettings(IDataTransferNode node) throws DBException {
+    public IDataTransferSettings getNodeSettings(@NotNull IDataTransferNode<?> node) throws DBException {
         DataTransferNodeDescriptor producerNode = DataTransferRegistry.getInstance().getNodeByType(node.getClass());
         if (producerNode == null) {
             throw new DBException("Cannot find node descriptor for " + node.getClass().getName());
@@ -528,22 +534,25 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         return processorPropsHistory.get(processor);
     }
 
-    public void setProcessorProperties(Map<String, Object> properties) {
+    public void setProcessorProperties(@NotNull Map<String, Object> properties) {
         if (processor == null) {
             throw new IllegalStateException("No processor selected");
         }
         processorPropsHistory.put(processor, properties);
     }
 
+    @NotNull
     public List<DataTransferPipe> getDataPipes() {
         return dataPipes;
     }
 
-    public void sortDataPipes(DBRProgressMonitor monitor) {
-        List<DBSEntity> entities = dataPipes.stream().sequential()
-                .filter(pipe -> pipe.getProducer() != null && pipe.getProducer().getDatabaseObject() instanceof DBSEntity)
+    public void sortDataPipes(@NotNull DBRProgressMonitor monitor) {
+        List<DBSEntity> entities = dataPipes.stream()
+                .filter(pipe ->
+                    pipe.getProducer() != null &&
+                    pipe.getProducer().getDatabaseObject() instanceof DBSEntity)
                 .map(pipe -> (DBSEntity) pipe.getProducer().getDatabaseObject())
-                .collect(Collectors.toList());
+            .toList();
         List<DBSEntity> simpleTables = new ArrayList<>();
         List<DBSEntity> cyclicTables = new ArrayList<>();
         List<DBSEntity> views = new ArrayList<>();
@@ -603,6 +612,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         CommonUtils.shiftRight(dataPipes, pipe);
     }
 
+    @Nullable
     public synchronized DataTransferPipe acquireDataPipe(@NotNull DBRProgressMonitor monitor, @Nullable DBTTask task) {
         if (curPipeNum >= dataPipes.size()) {
             return null;
@@ -614,22 +624,25 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         return result;
     }
 
+    @Nullable
     public DataTransferNodeDescriptor getProducer() {
         return producer;
     }
 
-    public void setProducer(DataTransferNodeDescriptor producer) {
+    public void setProducer(@Nullable DataTransferNodeDescriptor producer) {
         this.producer = producer;
     }
 
+    @Nullable
     public DataTransferNodeDescriptor getConsumer() {
         return consumer;
     }
 
-    public void setConsumer(DataTransferNodeDescriptor consumer) {
+    public void setConsumer(@Nullable DataTransferNodeDescriptor consumer) {
         this.consumer = consumer;
     }
 
+    @Nullable
     public DataTransferProcessorDescriptor getProcessor() {
         return processor;
     }
@@ -638,11 +651,15 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
         return producerProcessor;
     }
 
-    private void selectProducer(DataTransferNodeDescriptor producer) {
+    private void selectProducer(@NotNull DataTransferNodeDescriptor producer) {
         this.producer = producer;
     }
 
-    public void selectConsumer(DataTransferNodeDescriptor consumer, DataTransferProcessorDescriptor processor, boolean rewrite) {
+    public void selectConsumer(
+        @Nullable DataTransferNodeDescriptor consumer,
+        @Nullable DataTransferProcessorDescriptor processor,
+        boolean rewrite
+    ) {
         this.consumer = consumer;
         this.processor = processor;
         if (consumer != null && processor != null) {
@@ -735,7 +752,12 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
             for (Object nodeObj : (Collection<?>)nodeList) {
                 if (nodeObj instanceof Map) {
                     try {
-                        Object node = DTUtils.deserializeObject(runnableContext, serializeContext, task, (Map<String, Object>) nodeObj);
+                        Object node = DTUtils.deserializeObject(
+                            runnableContext,
+                            serializeContext,
+                            task,
+                            (Map<String, Object>) nodeObj
+                        );
                         if (nodeClass.isInstance(node)) {
                             result.add(nodeClass.cast(node));
                         }
@@ -775,7 +797,7 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
             this.producer = null;
             this.consumer = null;
             if (!dataPipes.isEmpty()) {
-                DataTransferPipe pipe = dataPipes.get(0);
+                DataTransferPipe pipe = dataPipes.getFirst();
                 this.producer = pipe.getProducer() == null ? null : registry.getNodeByType(pipe.getProducer().getClass());
                 this.consumer = pipe.getConsumer() == null ? null : registry.getNodeByType(pipe.getConsumer().getClass());
             }
@@ -842,6 +864,10 @@ public class DataTransferSettings implements DBTTaskSettings<DBPObject> {
                 }
             }
         }
+    }
+
+    public void resetTaskRuns() {
+        this.curPipeNum = 0;
     }
 
 }
