@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
  */
 package org.jkiss.dbeaver.registry;
 
-import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
@@ -27,11 +26,10 @@ import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.ModelPreferences;
 import org.jkiss.dbeaver.model.*;
-import org.jkiss.dbeaver.model.access.DBAAuthCredentials;
-import org.jkiss.dbeaver.model.access.DBAAuthModelExternal;
-import org.jkiss.dbeaver.model.access.DBACredentialsProvider;
+import org.jkiss.dbeaver.model.access.*;
 import org.jkiss.dbeaver.model.app.DBPDataSourceRegistry;
 import org.jkiss.dbeaver.model.app.DBPProject;
+import org.jkiss.dbeaver.model.app.DBPWorkspace;
 import org.jkiss.dbeaver.model.connection.*;
 import org.jkiss.dbeaver.model.data.DBDDataFormatterProfile;
 import org.jkiss.dbeaver.model.data.DBDFormatSettings;
@@ -39,6 +37,7 @@ import org.jkiss.dbeaver.model.data.DBDValueHandler;
 import org.jkiss.dbeaver.model.data.json.JSONUtils;
 import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.impl.SimpleExclusiveLock;
+import org.jkiss.dbeaver.model.impl.auth.AuthModelDatabaseNative;
 import org.jkiss.dbeaver.model.impl.data.DefaultValueHandler;
 import org.jkiss.dbeaver.model.meta.Property;
 import org.jkiss.dbeaver.model.meta.PropertyLength;
@@ -65,6 +64,7 @@ import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.runtime.IVariableResolver;
 import org.jkiss.dbeaver.runtime.properties.ObjectPropertyDescriptor;
 import org.jkiss.dbeaver.runtime.properties.PropertyCollector;
+import org.jkiss.dbeaver.utils.DataSourceUtils;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.utils.CommonUtils;
 
@@ -83,7 +83,7 @@ public class DataSourceDescriptor
     implements
     DBPDataSourceContainer,
     DBPImageProvider,
-    IAdaptable,
+    DBPAdaptable,
     DBPStatefulObject,
     DBPRefreshableObject,
     DBSSecretObject {
@@ -159,7 +159,7 @@ public class DataSourceDescriptor
     private boolean hidden;
 
     @NotNull
-    private DataSourceNavigatorSettings navigatorSettings;
+    private final DataSourceNavigatorSettings navigatorSettings;
     @NotNull
     private DBVModel virtualModel;
     private final boolean manageable;
@@ -190,7 +190,7 @@ public class DataSourceDescriptor
         @NotNull String id,
         @NotNull DBPDriver driver,
         @NotNull DBPConnectionConfiguration connectionInfo) {
-        this(registry, ((DataSourceRegistry) registry).getDefaultStorage(), DataSourceOriginLocal.INSTANCE, id, driver, connectionInfo);
+        this(registry, ((DataSourceRegistry<?>) registry).getDefaultStorage(), DataSourceOriginLocal.INSTANCE, id, driver, connectionInfo);
     }
 
     public DataSourceDescriptor(
@@ -241,9 +241,9 @@ public class DataSourceDescriptor
      */
     public DataSourceDescriptor(@NotNull DataSourceDescriptor source, @NotNull DBPDataSourceRegistry registry, boolean setDefaultStorage) {
         this.registry = registry;
-        this.storage = setDefaultStorage ? ((DataSourceRegistry) registry).getDefaultStorage() : source.storage;
+        this.storage = setDefaultStorage ? ((DataSourceRegistry<?>) registry).getDefaultStorage() : source.storage;
         this.origin = source.origin;
-        this.manageable = setDefaultStorage && ((DataSourceRegistry) registry).getDefaultStorage().isDefault();
+        this.manageable = setDefaultStorage && ((DataSourceRegistry<?>) registry).getDefaultStorage().isDefault();
         this.accessCheckRequired = manageable;
         this.id = source.id;
         this.name = source.name;
@@ -252,6 +252,9 @@ public class DataSourceDescriptor
         this.sharedCredentials = source.sharedCredentials;
         this.originalShareCredentials = this.sharedCredentials;
         this.navigatorSettings = new DataSourceNavigatorSettings(source.navigatorSettings);
+        if (navigatorSettings.isUserSettings()) {
+            navigatorSettings.setOriginalSettings(source.getOriginalNavigatorSettings());
+        }
         this.connectionReadOnly = source.connectionReadOnly;
         this.forceUseSingleConnection = source.forceUseSingleConnection;
         this.driver = source.driver;
@@ -287,6 +290,7 @@ public class DataSourceDescriptor
 
         this.virtualModel = new DBVModel(this, source.virtualModel);
     }
+
 
     public boolean isDisposed() {
         return disposed;
@@ -347,10 +351,10 @@ public class DataSourceDescriptor
     @NotNull
     @Override
     public DBPDataSourceOrigin getOrigin() {
-        if (origin instanceof DataSourceOriginLazy) {
+        if (origin instanceof DataSourceOriginLazy dsoLazy) {
             DBPDataSourceOrigin realOrigin;
             try {
-                realOrigin = ((DataSourceOriginLazy) this.origin).resolveRealOrigin();
+                realOrigin = dsoLazy.resolveRealOrigin();
             } catch (DBException e) {
                 log.debug("Error reading datasource origin", e);
                 realOrigin = null;
@@ -398,8 +402,13 @@ public class DataSourceDescriptor
         return navigatorSettings;
     }
 
-    public void setNavigatorSettings(DBNBrowseSettings copyFrom) {
-        this.navigatorSettings = new DataSourceNavigatorSettings(copyFrom);
+    @NotNull
+    public DataSourceNavigatorSettings getOriginalNavigatorSettings() {
+        return (DataSourceNavigatorSettings) navigatorSettings.getOriginalSettings();
+    }
+
+    public void setNavigatorSettings(@NotNull DBNBrowseSettings copyFrom) {
+        getOriginalNavigatorSettings().copyFrom(copyFrom);
     }
 
     @NotNull
@@ -511,20 +520,11 @@ public class DataSourceDescriptor
 
     @Override
     public boolean isDefaultAutoCommit() {
-        if (connectionInfo.getBootstrap().getDefaultAutoCommit() != null) {
-            return connectionInfo.getBootstrap().getDefaultAutoCommit();
+        Boolean bootstrapAutoCommit = connectionInfo.getBootstrap().getDefaultAutoCommit();
+        if (bootstrapAutoCommit != null) {
+            return bootstrapAutoCommit;
         } else {
             return getConnectionConfiguration().getConnectionType().isAutocommit();
-        }
-    }
-
-    @Override
-    public void setDefaultAutoCommit(final boolean autoCommit) {
-        // Save in preferences
-        if (autoCommit == getConnectionConfiguration().getConnectionType().isAutocommit()) {
-            connectionInfo.getBootstrap().setDefaultAutoCommit(null);
-        } else {
-            connectionInfo.getBootstrap().setDefaultAutoCommit(autoCommit);
         }
     }
 
@@ -533,7 +533,9 @@ public class DataSourceDescriptor
         this.secretsContainsDatabaseCreds = false;
         this.availableSharedCredentials = null;
         this.selectedSharedCredentials = null;
-        if (sharedCredentials) {
+        // we need to reset username and password for connection that are not connected to database
+        // in some cases, when connection is established, username is needed (e.g. retrieving current user info in Cubrid)
+        if (sharedCredentials && !isConnected()) {
             // For shared credentials reset cache also
             connectionInfo.setUserName(null);
             connectionInfo.setUserPassword(null);
@@ -563,15 +565,6 @@ public class DataSourceDescriptor
     @Override
     public Integer getDefaultTransactionsIsolation() {
         return connectionInfo.getBootstrap().getDefaultTransactionIsolation();
-    }
-
-    @Override
-    public void setDefaultTransactionsIsolation(@Nullable final DBPTransactionIsolation isolationLevel) {
-        if (isolationLevel == null) {
-            connectionInfo.getBootstrap().setDefaultTransactionIsolation(null);
-        } else {
-            connectionInfo.getBootstrap().setDefaultTransactionIsolation(isolationLevel.getCode());
-        }
     }
 
     @Override
@@ -644,13 +637,18 @@ public class DataSourceDescriptor
         if (filterMapping != null) {
             // Update filter
             if (parentObject == null) {
-                filterMapping.defaultFilter = filter;
+                filterMapping.globalFilter = filter;
             } else {
                 filterMapping.customFilters.put(FilterMapping.getFilterContainerUniqueID(parentObject), filter);
             }
+        } else {
+            setObjectFilter(type.getName(), toObjectID(parentObject), filter);
         }
+    }
 
-        updateObjectFilter(type.getName(), parentObject == null ? null : FilterMapping.getFilterContainerUniqueID(parentObject), filter);
+    @Nullable
+    protected String toObjectID(@Nullable DBSObject parentObject) {
+        return parentObject == null ? null : FilterMapping.getFilterContainerUniqueID(parentObject);
     }
 
     @Nullable
@@ -664,18 +662,18 @@ public class DataSourceDescriptor
         this.clientApplicationName = applicationName;
     }
 
-    void clearFilters() {
+    protected void clearFilters() {
         filterMap.clear();
     }
 
-    void updateObjectFilter(String typeName, @Nullable String objectID, DBSObjectFilter filter) {
+    protected void setObjectFilter(@NotNull String typeName, @Nullable String objectID, @Nullable DBSObjectFilter filter) {
         FilterMapping filterMapping = filterMap.get(typeName);
         if (filterMapping == null) {
             filterMapping = new FilterMapping(typeName);
             filterMap.put(typeName, filterMapping);
         }
         if (objectID == null) {
-            filterMapping.defaultFilter = filter;
+            filterMapping.globalFilter = filter;
         } else {
             filterMapping.customFilters.put(objectID, filter);
         }
@@ -908,7 +906,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void persistSecrets(DBSSecretController secretController) throws DBException {
+    public void persistSecrets(@NotNull DBSSecretController secretController) throws DBException {
         persistSecrets(secretController, false);
     }
 
@@ -998,7 +996,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void resolveSecrets(DBSSecretController secretController) throws DBException {
+    public void resolveSecrets(@NotNull DBSSecretController secretController) throws DBException {
         if (!isSharedCredentials()) {
             // try to load private user credentials
             String secretValue = secretController.getPrivateSecretValue(getSecretValueId());
@@ -1010,7 +1008,7 @@ public class DataSourceDescriptor
         } else {
             this.availableSharedCredentials = secretController.discoverCurrentUserSecrets(this);
             if (this.availableSharedCredentials.size() == 1) {
-                setSelectedSharedCredentials(availableSharedCredentials.get(0));
+                setSelectedSharedCredentials(availableSharedCredentials.getFirst());
             }
         }
 
@@ -1087,11 +1085,25 @@ public class DataSourceDescriptor
 
         resolveSecretsIfNeeded();
 
-        if (isSharedCredentials() && !isSharedCredentialsSelected()) {
+        String forceSecretId = getPreferenceStore().getString(DBPConnectionConfiguration.PROP_SECRET_SUBJECT_ID);
+        if (isSharedCredentials() && (!isSharedCredentialsSelected() || CommonUtils.isNotEmpty(forceSecretId))) {
             var sharedCreds = listSharedCredentialFromCache();
-            if (!CommonUtils.isEmpty(sharedCreds)) {
-                log.debug("Shared credentials not selected - use first one: " + sharedCreds.get(0).getDisplayName());
-                setSelectedSharedCredentials(sharedCreds.get(0));
+            if (CommonUtils.isNotEmpty(forceSecretId)) {
+                DBSSecretValue found = null;
+                for (DBSSecretValue secret : sharedCreds) {
+                    if (forceSecretId.equals(secret.getSubjectId())) {
+                        log.debug("Shared credentials forced by preference - use: " + secret.getDisplayName());
+                        found = secret;
+                        break;
+                    }
+                }
+                if (found == null) {
+                    throw new DBException("Shared credentials with subject ID '" + forceSecretId + "' not found");
+                }
+                setSelectedSharedCredentials(found);
+            } else if (!CommonUtils.isEmpty(sharedCreds)) {
+                log.debug("Shared credentials not selected - use first one: " + sharedCreds.getFirst().getDisplayName());
+                setSelectedSharedCredentials(sharedCreds.getFirst());
                 monitor.subTask("Use first available shared credentials");
             } else {
                 log.debug("Shared credentials not found - attempt to connect as is");
@@ -1179,6 +1191,13 @@ public class DataSourceDescriptor
                 }
 
                 if (tunnelConfiguration != null) {
+                    // SSH tunneling can be disabled in multi-user apps
+                    DBPWorkspace workspace = getProject().getWorkspace();
+                    if (!workspace.supportsRealmFeature(DBAPermissionRealm.FEATURE_SSH_TUNNELING)) {
+                        throw new DBException(
+                            "SSH tunneling is required for this connection, but it is currently disabled. Please contact your administrator.");
+                    }
+
                     monitor.subTask("Initialize tunnel");
                     tunnelHandler = tunnelConfiguration.createHandler(DBWTunnel.class);
                     try {
@@ -1203,7 +1222,7 @@ public class DataSourceDescriptor
                             DBExecUtils.finishContextInitiation(this);
                         }
                     } catch (Exception e) {
-                        throw new DBCException("Can't initialize tunnel", e);
+                        throw new DBCException("Error initializing tunnel", e);
                     }
                     monitor.worked(1);
                 }
@@ -1319,7 +1338,7 @@ public class DataSourceDescriptor
 
     }
 
-    private void resolveSecretsIfNeeded() throws DBException {
+    protected void resolveSecretsIfNeeded() throws DBException {
         if (secretsResolved || !getProject().isUseSecretStorage()) {
             return;
         }
@@ -1397,8 +1416,9 @@ public class DataSourceDescriptor
             {
                 // Run output grab job
                 new AbstractJob(processDescriptor.getName() + ": output reader") {
+                    @NotNull
                     @Override
-                    protected IStatus run(DBRProgressMonitor monitor) {
+                    protected IStatus run(@NotNull DBRProgressMonitor monitor) {
                         try {
                             String output = processDescriptor.dumpErrors();
                             log.debug("Process error output:\n" + output);
@@ -1448,7 +1468,6 @@ public class DataSourceDescriptor
         connecting = true;
         releaseDataSourceUsers(monitor);
         try {
-            closeConnectionDetached();
             monitor.beginTask("Disconnect from '" + getName() + "'", 5 + dataSource.getAvailableInstances().size());
 
             processEvents(monitor, DBPConnectionEventType.BEFORE_DISCONNECT);
@@ -1482,6 +1501,7 @@ public class DataSourceDescriptor
             if (dataSource != null) {
                 dataSource.shutdown(monitor);
             }
+            closeConnectionDetached();
             monitor.worked(1);
 
             // Close tunnelHandler
@@ -1604,7 +1624,7 @@ public class DataSourceDescriptor
     public void acquire(@NotNull DBPDataSourceTask user) {
         synchronized (users) {
             if (users.contains(user)) {
-                log.warn("Datasource user '" + user + "' already registered in datasource '" + getName() + "'");
+                log.debug("Datasource user '" + user + "' already registered in datasource '" + getName() + "'");
             } else {
                 users.add(user);
             }
@@ -1616,7 +1636,7 @@ public class DataSourceDescriptor
         synchronized (users) {
             if (!users.remove(user)) {
                 if (!isDisposed()) {
-                    log.warn("Datasource user '" + user + "' is not registered in datasource '" + getName() + "'");
+                    log.debug("Datasource user '" + user + "' is not registered in datasource '" + getName() + "'");
                 }
             }
         }
@@ -1674,6 +1694,7 @@ public class DataSourceDescriptor
         this.extensions.putAll(extensions);
     }
 
+    @NotNull
     @Override
     public DBDDataFormatterProfile getDataFormatterProfile() {
         if (this.formatterProfile == null) {
@@ -1727,7 +1748,7 @@ public class DataSourceDescriptor
 
     @Nullable
     @Override
-    public <T> T getAdapter(Class<T> adapter) {
+    public <T> T getAdapter(@NotNull Class<T> adapter) {
         if (DBPDataSourceContainer.class.isAssignableFrom(adapter)) {
             return adapter.cast(this);
         } else if (adapter == DBPPropertySource.class) {
@@ -1884,7 +1905,7 @@ public class DataSourceDescriptor
         this.connectionReadOnly = descriptor.connectionReadOnly;
         this.forceUseSingleConnection = descriptor.forceUseSingleConnection;
 
-        this.navigatorSettings = new DataSourceNavigatorSettings(descriptor.getNavigatorSettings());
+        setNavigatorSettings(descriptor.navigatorSettings);
     }
 
     @Override
@@ -2026,6 +2047,33 @@ public class DataSourceDescriptor
         DBPConnectionConfiguration actualConfig = dataSourceContainer.getActualConnectionConfiguration();
         DBPConnectionConfiguration connConfig = dataSourceContainer.getConnectionConfiguration();
 
+        if (networkHandler == null) {
+            DBAAuthModel<?> authModel = actualConfig.getAuthModel();
+            if (authModel.getClass() != AuthModelDatabaseNative.class) {
+                boolean savedPasswordState = dataSourceContainer.isSavePassword();
+                DBPConnectionConfiguration savedConnectionInfo = new DBPConnectionConfiguration(connConfig);
+                if (!DBWorkbench.getPlatformUI().promptAuthModelCredentials(dataSourceContainer)) {
+                    dataSourceContainer.setSavePassword(savedPasswordState);
+                    return false;
+                }
+                DBPConnectionConfiguration promptConnectionInfo = new DBPConnectionConfiguration(connConfig);
+                if (actualConfig != connConfig || !dataSourceContainer.isSavePassword()) {
+                    dataSourceContainer.resolvedConnectionInfo = promptConnectionInfo;
+                }
+                if (dataSourceContainer.isSavePassword()) {
+                    try {
+                        dataSourceContainer.getRegistry().updateDataSource(dataSourceContainer);
+                    } catch (DBException e) {
+                        DBWorkbench.getPlatformUI().showError("Error saving datasource", null, e);
+                    }
+                } else {
+                    dataSourceContainer.setConnectionInfo(savedConnectionInfo);
+                    dataSourceContainer.setSavePassword(savedPasswordState);
+                }
+                return true;
+            }
+        }
+
         final String prompt = networkHandler != null ?
             NLS.bind(RegistryMessages.dialog_connection_auth_title_for_handler, networkHandler.getTitle()) :
             "'" + dataSourceContainer.getName() + RegistryMessages.dialog_connection_auth_title; //$NON-NLS-1$
@@ -2061,7 +2109,7 @@ public class DataSourceDescriptor
             dataSourceContainer.setSavePassword(authInfo.isSavePassword());
         }
         if (authInfo.isSavePassword()) {
-            if (authInfo.isSavePassword() && connConfig != actualConfig) {
+            if (connConfig != actualConfig) {
                 if (authType == DBWTunnel.AuthCredentials.CREDENTIALS) {
                     if (networkHandler != null) {
                         networkHandler.setUserName(authInfo.getUserName());
@@ -2233,6 +2281,10 @@ public class DataSourceDescriptor
         if (!CommonUtils.isEmpty(handlerList)) {
             for (Map<String, Object> handlerMap : handlerList) {
                 String handlerId = JSONUtils.getString(handlerMap, RegistryConstants.ATTR_ID);
+                if (handlerId == null) {
+                    log.warn("Network handler ID is missing in the configuration");
+                    continue;
+                }
                 DBWHandlerConfiguration hc = connectionInfo.getHandler(handlerId);
                 if (hc == null) {
                     log.warn("Handler '" + handlerId + "' not found in datasource '" + getId() + "'. Secret configuration will be lost.");
@@ -2300,6 +2352,4 @@ public class DataSourceDescriptor
             log.error("Error reading datasource '" + getId() + "' legacy secrets", e);
         }
     }
-
-
 }
