@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,17 +25,18 @@ import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.dnd.TextTransfer;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.layout.GridData;
-import org.eclipse.swt.widgets.*;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Table;
+import org.eclipse.swt.widgets.ToolBar;
+import org.eclipse.swt.widgets.ToolItem;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.*;
-import org.jkiss.dbeaver.model.exec.DBCException;
 import org.jkiss.dbeaver.model.exec.DBCExecutionContext;
 import org.jkiss.dbeaver.model.navigator.DBNProject;
 import org.jkiss.dbeaver.model.runtime.VoidProgressMonitor;
@@ -65,9 +66,9 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
 
     private static final Log log = Log.getLog(SQLToolTaskWizardPageSettings.class);
 
-    private SQLToolTaskWizard sqlWizard;
+    private final SQLToolTaskWizard sqlWizard;
 
-    private List<DBSObject> selectedObjects = new ArrayList<>();
+    private final List<DBSObject> selectedObjects = new ArrayList<>();
     private PropertyTreeViewer taskOptionsViewer;
     private Object sqlPreviewPanel;
     private TableViewer objectsViewer;
@@ -88,13 +89,19 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
         Composite composite = UIUtils.createComposite(parent, 1);
         composite.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-        SashForm previewSplitter = new SashForm(composite, SWT.VERTICAL);
+        Composite previewSplitter = UIUtils.createComposite(composite, 1);
         previewSplitter.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         SashForm settingsPanel = new SashForm(previewSplitter, SWT.HORIZONTAL);
-        Group objectsPanel;
+        settingsPanel.setLayoutData(new GridData(GridData.FILL_BOTH));
+        Composite objectsPanel;
         {
-            objectsPanel = UIUtils.createControlGroup(settingsPanel, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_group_label_objects, 2, GridData.FILL_BOTH, 0);
+            objectsPanel = UIUtils.createTitledComposite(
+                settingsPanel,
+                TasksSQLUIMessages.sql_tool_task_wizard_page_settings_group_label_objects,
+                2,
+                GridData.FILL_BOTH
+            );
             objectsViewer = new TableViewer(objectsPanel, SWT.BORDER | SWT.MULTI | SWT.FULL_SELECTION);
             objectsViewer.setContentProvider(new ListContentProvider());
             objectsViewer.setLabelProvider(new ColumnLabelProvider() {
@@ -117,70 +124,78 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
 
             ToolBar buttonsToolbar = new ToolBar(objectsPanel, SWT.VERTICAL);
             buttonsToolbar.setLayoutData(new GridData(GridData.VERTICAL_ALIGN_BEGINNING));
-            UIUtils.createToolItem(buttonsToolbar, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_add_string, UIIcon.ROW_ADD, new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    DBNProject projectNode = DBWorkbench.getPlatform().getNavigatorModel().getRoot().getProjectNode(sqlWizard.getProject());
-                    SQLToolTaskObjectSelectorDialog objectListDialog = new SQLToolTaskObjectSelectorDialog(
-                        getShell(),
-                        projectNode,
-                        (TaskTypeDescriptor) sqlWizard.getTaskType());
-                    if (objectListDialog.open() == IDialogConstants.OK_ID) {
-                        for (DBSObject object : objectListDialog.getSelectedObjects()) {
-                            if (!selectedObjects.contains(object)) {
-                                selectedObjects.add(object);
+            UIUtils.createToolItem(
+                buttonsToolbar,
+                TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_add_string,
+                UIIcon.ROW_ADD,
+                SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                        DBNProject projectNode = DBWorkbench.getPlatform().getNavigatorModel().getRoot().getProjectNode(sqlWizard.getProject());
+                        SQLToolTaskObjectSelectorDialog objectListDialog = new SQLToolTaskObjectSelectorDialog(
+                            getShell(),
+                            projectNode,
+                            (TaskTypeDescriptor) sqlWizard.getTaskType());
+                        if (objectListDialog.open() == IDialogConstants.OK_ID) {
+                            for (DBSObject object : objectListDialog.getSelectedObjects()) {
+                                if (!selectedObjects.contains(object)) {
+                                    selectedObjects.add(object);
+                                }
                             }
+                            refreshObjects();
+                            updatePageCompletion();
                         }
-                        refreshObjects();
-                        updatePageCompletion();
-                    }
-                }
-            });
-            ToolItem deleteItem = UIUtils.createToolItem(buttonsToolbar, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_remove_string, UIIcon.ROW_DELETE, new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    ISelection selection = objectsViewer.getSelection();
-                    if (!selection.isEmpty() && selection instanceof IStructuredSelection) {
-                        for (Object element : ((IStructuredSelection) selection).toArray()) {
-                            if (element instanceof DBSObject) {
-                                selectedObjects.remove(element);
+                    })
+            );
+            ToolItem deleteItem = UIUtils.createToolItem(
+                buttonsToolbar,
+                TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_remove_string,
+                UIIcon.ROW_DELETE,
+                SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                        ISelection selection = objectsViewer.getSelection();
+                        if (!selection.isEmpty() && selection instanceof IStructuredSelection) {
+                            for (Object element : ((IStructuredSelection) selection).toArray()) {
+                                if (element instanceof DBSObject) {
+                                    selectedObjects.remove(element);
+                                }
                             }
+                            refreshObjects();
+                            updatePageCompletion();
                         }
-                        refreshObjects();
-                        updatePageCompletion();
-                    }
-                }
-            });
+                })
+            );
             UIUtils.createToolBarSeparator(buttonsToolbar, SWT.HORIZONTAL);
             ToolItem[] moveButtons = new ToolItem[2];
-            moveButtons[0] = UIUtils.createToolItem(buttonsToolbar, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_move_script_up, UIIcon.ARROW_UP, new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    int selectionIndex = objectTable.getSelectionIndex();
-                    if (selectionIndex > 0) {
-                        DBSObject prevScript = selectedObjects.get(selectionIndex - 1);
-                        selectedObjects.set(selectionIndex - 1, selectedObjects.get(selectionIndex));
-                        selectedObjects.set(selectionIndex, prevScript);
-                        refreshObjects();
-                    }
-                    moveButtons[0].setEnabled(selectionIndex > 1);
-                    moveButtons[1].setEnabled(selectionIndex < objectTable.getItemCount() - 1);
-                }
-            });
-            moveButtons[1] = UIUtils.createToolItem(buttonsToolbar, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_move_script_down, UIIcon.ARROW_DOWN, new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    int selectionIndex = objectTable.getSelectionIndex();
-                    if (selectionIndex < objectTable.getItemCount() - 1) {
-                        DBSObject nextScript = selectedObjects.get(selectionIndex + 1);
-                        selectedObjects.set(selectionIndex + 1, selectedObjects.get(selectionIndex));
-                        selectedObjects.set(selectionIndex, nextScript);
-                        refreshObjects();
-                    }
-                    moveButtons[0].setEnabled(selectionIndex > 0);
-                    moveButtons[1].setEnabled(selectionIndex < objectTable.getItemCount() - 2);
-                }
-            });
+            moveButtons[0] = UIUtils.createToolItem(
+                buttonsToolbar,
+                TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_move_script_up,
+                UIIcon.ARROW_UP,
+                SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                        int selectionIndex = objectTable.getSelectionIndex();
+                        if (selectionIndex > 0) {
+                            DBSObject prevScript = selectedObjects.get(selectionIndex - 1);
+                            selectedObjects.set(selectionIndex - 1, selectedObjects.get(selectionIndex));
+                            selectedObjects.set(selectionIndex, prevScript);
+                            refreshObjects();
+                        }
+                        moveButtons[0].setEnabled(selectionIndex > 1);
+                        moveButtons[1].setEnabled(selectionIndex < objectTable.getItemCount() - 1);
+                })
+            );
+            moveButtons[1] = UIUtils.createToolItem(
+                buttonsToolbar,
+                TasksSQLUIMessages.sql_tool_task_wizard_page_settings_tool_item_text_move_script_down,
+                UIIcon.ARROW_DOWN,
+                SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                        int selectionIndex = objectTable.getSelectionIndex();
+                        if (selectionIndex < objectTable.getItemCount() - 1) {
+                            DBSObject nextScript = selectedObjects.get(selectionIndex + 1);
+                            selectedObjects.set(selectionIndex + 1, selectedObjects.get(selectionIndex));
+                            selectedObjects.set(selectionIndex, nextScript);
+                            refreshObjects();
+                        }
+                        moveButtons[0].setEnabled(selectionIndex > 0);
+                        moveButtons[1].setEnabled(selectionIndex < objectTable.getItemCount() - 2);
+                })
+            );
             objectsViewer.addSelectionChangedListener(event -> {
                 int selectionIndex = objectTable.getSelectionIndex();
                 deleteItem.setEnabled(selectionIndex >= 0);
@@ -194,13 +209,22 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
         }
 
         {
-            Group optionsPanel = UIUtils.createControlGroup(settingsPanel, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_group_label_settings, 1, GridData.FILL_BOTH, 0);
+            Composite optionsPanel = UIUtils.createTitledComposite(
+                settingsPanel,
+                TasksSQLUIMessages.sql_tool_task_wizard_page_settings_group_label_settings,
+                1,
+                GridData.FILL_BOTH
+            );
 
-            taskOptionsViewer = new PropertyTreeViewer(optionsPanel, SWT.BORDER);
+            taskOptionsViewer = new PropertyTreeViewer(optionsPanel, SWT.NONE);
+            taskOptionsViewer.getControl().setLayoutData(new GridData(GridData.FILL_BOTH));
             taskOptionsViewer.addPropertyChangeListener(event -> updateScriptPreview());
         }
 
         Composite previewPanel = UIUtils.createComposite(previewSplitter, 1);
+        GridData gd = new GridData(GridData.FILL_BOTH);
+        gd.heightHint = 200;
+        previewPanel.setLayoutData(gd);
         previewPanel.setLayout(new FillLayout());
         serviceSQL = DBWorkbench.getService(UIServiceSQL.class);
         if (serviceSQL != null) {
@@ -210,7 +234,7 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
                     previewPanel,
                     this,
                     TasksSQLUIMessages.sql_tool_task_wizard_page_settings_sql_panel_name,
-                    true,
+                    false,
                     "");
             } catch (DBException e) {
                 DBWorkbench.getPlatformUI().showError(TasksSQLUIMessages.sql_tool_task_wizard_page_settings_title_sql_preview_error,
@@ -220,21 +244,20 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
 
         Composite controlsPanel = UIUtils.createComposite(composite, 2);
 
-        UIUtils.createDialogButton(controlsPanel, TasksSQLUIMessages.sql_tool_task_wizard_page_settings_dialog_button_label_copy, new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
+        UIUtils.createDialogButton(
+            controlsPanel,
+            TasksSQLUIMessages.sql_tool_task_wizard_page_settings_dialog_button_label_copy,
+            SelectionListener.widgetSelectedAdapter(selectionEvent -> {
                 String text = serviceSQL.getSQLPanelText(sqlPreviewPanel);
-                if (!CommonUtils.isEmpty(text)) {
-                    UIUtils.setClipboardContents(getShell().getDisplay(), TextTransfer.getInstance(), text);
+                    if (!CommonUtils.isEmpty(text)) {
+                        UIUtils.setClipboardContents(getShell().getDisplay(), TextTransfer.getInstance(), text);
+                    }
                 }
-            }
-        });
+            ));
 
         loadSettings();
 
-        if (taskOptionsViewer.getTree().getItemCount() == 0) {
-            settingsPanel.setMaximizedControl(objectsPanel);
-        }
+        settingsPanel.setWeights(500, 500);
 
         setControl(composite);
     }
@@ -248,10 +271,6 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
     @Override
     public void activatePage() {
         updatePageCompletion();
-    }
-
-    @Override
-    public void deactivatePage() {
     }
 
     @Override
@@ -275,7 +294,7 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
         SQLToolExecuteHandler taskHandler = sqlWizard.getTaskHandler();
         try {
             return taskHandler.generateScript(new VoidProgressMonitor(), sqlWizard.getSettings());
-        } catch (DBCException e) {
+        } catch (Exception e) {
             log.error(e);
             return "-- Error: " + e.getMessage();
         }
@@ -318,7 +337,7 @@ class SQLToolTaskWizardPageSettings extends ActiveWizardPage<SQLToolTaskWizard> 
         SQLToolExecuteSettings<DBSObject> settings = sqlWizard.getSettings();
 
         if (settings != null && !settings.getObjectList().isEmpty()) {
-            return DBUtils.getDefaultContext(settings.getObjectList().get(0), false);
+            return DBUtils.getDefaultContext(settings.getObjectList().getFirst(), false);
         }
         return null;
     }
