@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,6 +26,7 @@ import org.eclipse.ui.IWorkbenchPreferencePage;
 import org.eclipse.ui.IWorkbenchPropertyPage;
 import org.jkiss.code.NotNull;
 import org.jkiss.dbeaver.model.erd.ERDAttributeVisibility;
+import org.jkiss.dbeaver.model.erd.ERDConstants;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.ui.UIUtils;
@@ -65,13 +66,14 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
     private Button snapCheck;
     private Combo routingType;
     private Combo notationType;
+    private Button loadLazyDescriptions;
     private Spinner spinnerGridWidth;
     private Spinner spinnerGridHeight;
 
-    private List<Button> visibilityButtons = new ArrayList<>();
-    private List<Button> styleButtons = new ArrayList<>();
-    private ERDConnectionRouterRegistry routerRegistry = ERDConnectionRouterRegistry.getInstance();
-    private ERDNotationRegistry notationRegistry = ERDNotationRegistry.getInstance();
+    private final List<Button> visibilityButtons = new ArrayList<>();
+    private final List<Button> styleButtons = new ArrayList<>();
+    private final ERDConnectionRouterRegistry routerRegistry = ERDConnectionRouterRegistry.getInstance();
+    private final ERDNotationRegistry notationRegistry = ERDNotationRegistry.getInstance();
     private List<ERDConnectionRouterDescriptor> routerDescriptors = new ArrayList<>();
     private List<ERDNotationDescriptor> notationDescriptors = new ArrayList<>();
     
@@ -81,20 +83,34 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
         DBPPreferenceStore store = ERDUIActivator.getDefault().getPreferences();
         routerDescriptors = routerRegistry.getDescriptors();
         notationDescriptors = notationRegistry.getNotations();
-        Composite composite = UIUtils.createPlaceholder(parent, 2, 5);
-        createContentsGroup(store, composite);
-        createColorPrefGroup(store, composite);
-        createVisibilityGroup(store, composite);
-        createStyleGroup(store, composite);
-        createGridGroup(store, composite);
-        createPrintGroup(store, composite);
-        createAdvancedGroup(store, composite);
+        Composite composite = UIUtils.createComposite(parent, 2);
+        if (hasContentGroup()) {
+            createContentsGroup(store, composite);
+        }
+        if (hasColorPrefGroup()) {
+            createColorPrefGroup(store, composite);
+        }
+        if (hasVisibilityGroup()) {
+            createVisibilityGroup(store, composite);
+        }
+        if (hasStyleGroup()) {
+            createStyleGroup(store, composite);
+        }
+        if (hasGridGroup()) {
+            createGridGroup(store, composite);
+        }
+        if (hasPrintGroup()) {
+            createPrintGroup(store, composite);
+        }
+        if (hasAdvancedGroup()) {
+            createAdvancedGroup(store, composite);
+        }
         return composite;
     }
 
     private void createAdvancedGroup(DBPPreferenceStore store, Composite composite) {
-        Group contentsGroup = UIUtils.createControlGroup(composite, ERDUIMessages.erd_preference_page_title_advanced, 2, 0, 0);
-        contentsGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false, 2, 1));
+        Composite contentsGroup = UIUtils.createTitledComposite(composite, ERDUIMessages.erd_preference_page_title_advanced, 2);
+
         // routing
         routingType = UIUtils.createLabelCombo(contentsGroup, ERDUIMessages.erd_preference_page_title_routing_combo,
             SWT.DROP_DOWN | SWT.READ_ONLY);
@@ -102,11 +118,7 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
             routingType.add(descriptor.getName());
         }
         ERDConnectionRouterDescriptor defConnectionRouter = routerRegistry.getActiveRouter();
-        if (defConnectionRouter != null) {
-            routingType.select(routerDescriptors.indexOf(defConnectionRouter));
-        } else {
-            routingType.select(0);
-        }
+        routingType.select(routerDescriptors.indexOf(defConnectionRouter));
         // notation
         notationType = UIUtils.createLabelCombo(contentsGroup, ERDUIMessages.erd_preference_page_title_notation_combo,
             SWT.DROP_DOWN | SWT.READ_ONLY);
@@ -119,10 +131,23 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
         } else {
             notationType.select(0);
         }
+        // Load lazy descriptions
+        loadLazyDescriptions = UIUtils.createCheckbox(
+            contentsGroup,
+            ERDUIMessages.erd_preference_page_title_load_lazy_descriptions,
+            null,
+            store.getBoolean(ERDUIConstants.PREF_LOAD_LAZY_DESCRIPTIONS),
+            2);
     }
 
     private void createContentsGroup(DBPPreferenceStore store, Composite composite) {
-        Group contentsGroup = UIUtils.createControlGroup(composite, ERDUIMessages.erd_preference_page_title_diagram_contents, 1, 0, 0);
+        Composite contentsGroup = UIUtils.createTitledComposite(
+            composite,
+            ERDUIMessages.erd_preference_page_title_diagram_contents,
+            1,
+            0,
+            0
+        );
         contentsGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false, 1, 1));
         contentsShowViews = UIUtils.createCheckbox(contentsGroup, ERDUIMessages.erd_preference_page_title_shows_views,
             store.getBoolean(ERDUIConstants.PREF_DIAGRAM_SHOW_VIEWS));
@@ -131,7 +156,13 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
     }
 
     private void createColorPrefGroup(DBPPreferenceStore store, Composite composite) {
-        Group contentsGroup = UIUtils.createControlGroup(composite, ERDUIMessages.erd_preference_page_title_color_pref, 1, 0, 0);
+        Composite contentsGroup = UIUtils.createTitledComposite(
+            composite,
+            ERDUIMessages.erd_preference_page_title_color_pref,
+            1,
+            0,
+            0
+        );
         contentsGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false, 1, 1));
         changeBorderColors = UIUtils.createCheckbox(contentsGroup, ERDUIMessages.erd_preference_page_title_change_border_colors,
             store.getBoolean(ERDUIConstants.PREF_DIAGRAM_CHANGE_BORDER_COLORS));
@@ -141,8 +172,11 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
 
     private void createVisibilityGroup(DBPPreferenceStore store, Composite composite) {
         ERDAttributeVisibility defaultVisibility = ERDAttributeVisibility.getDefaultVisibility(store);
-        Group elemsGroup = UIUtils.createControlGroup(composite, ERDUIMessages.erd_preference_page_title_attributes_visibility, 1,
-             0, 0);
+        Composite elemsGroup = UIUtils.createTitledComposite(
+            composite,
+            ERDUIMessages.erd_preference_page_title_attributes_visibility,
+            1
+        );
         elemsGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false, 1, 1));
         for (ERDAttributeVisibility visibility : ERDAttributeVisibility.values()) {
             Button radio = new Button(elemsGroup, SWT.RADIO);
@@ -157,8 +191,7 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
 
     private void createStyleGroup(DBPPreferenceStore store, Composite composite) {
         ERDViewStyle[] enabledStyles = ERDViewStyle.getDefaultStyles(store);
-        Group elemsGroup = UIUtils.createControlGroup(composite, ERDUIMessages.erd_preference_page_title_attribute_style, 1, 0, 0);
-        elemsGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false, 1, 1));
+        Composite elemsGroup = UIUtils.createTitledComposite(composite, ERDUIMessages.erd_preference_page_title_attribute_style, 1);
         for (ERDViewStyle style : ERDViewStyle.values()) {
             Button check = new Button(elemsGroup, SWT.CHECK);
             check.setData(style);
@@ -171,7 +204,7 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
     }
 
     private void createGridGroup(DBPPreferenceStore store, Composite composite) {
-        Group gridGroup = UIUtils.createControlGroup(composite, ERDUIMessages.pref_page_erd_group_grid, 2, 0, 0);
+        Composite gridGroup = UIUtils.createTitledComposite(composite, ERDUIMessages.pref_page_erd_group_grid, 2);
         gridGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false, 1, 1));
         gridCheck = UIUtils.createCheckbox(gridGroup, ERDUIMessages.pref_page_erd_checkbox_grid_enabled, null,
             store.getBoolean(ERDUIConstants.PREF_GRID_ENABLED), 2);
@@ -185,18 +218,18 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
 
     private void createPrintGroup(DBPPreferenceStore store, Composite composite)
     {
-        Group printGroup = UIUtils.createControlGroup(composite, ERDUIMessages.pref_page_erd_group_print, 2, 0, 0);
+        Composite printGroup = UIUtils.createTitledComposite(composite, ERDUIMessages.pref_page_erd_group_print, 2);
         modeCombo = UIUtils.createLabelCombo(printGroup, ERDUIMessages.pref_page_erd_combo_page_mode, SWT.READ_ONLY | SWT.DROP_DOWN);
         modeCombo.add(ERDUIMessages.pref_page_erd_item_tile);
         modeCombo.add(ERDUIMessages.pref_page_erd_item_fit_page);
         modeCombo.add(ERDUIMessages.pref_page_erd_item_fit_width);
         modeCombo.add(ERDUIMessages.pref_page_erd_item_fit_height);
-        int modeIndex = 0;
-        switch (store.getInt(ERDUIConstants.PREF_PRINT_PAGE_MODE)) {
-            case PrintFigureOperation.FIT_PAGE: modeIndex = 1; break;
-            case PrintFigureOperation.FIT_WIDTH: modeIndex = 2; break;
-            case PrintFigureOperation.FIT_HEIGHT: modeIndex = 3; break;
-        }
+        int modeIndex = switch (store.getInt(ERDUIConstants.PREF_PRINT_PAGE_MODE)) {
+            case PrintFigureOperation.FIT_PAGE -> 1;
+            case PrintFigureOperation.FIT_WIDTH -> 2;
+            case PrintFigureOperation.FIT_HEIGHT -> 3;
+            default -> 0;
+        };
         modeCombo.select(modeIndex);
 
         spinnerMarginTop = UIUtils.createLabelSpinner(printGroup, ERDUIMessages.pref_page_erd_spinner_margin_top, store.getInt(ERDUIConstants.PREF_PRINT_MARGIN_TOP), 0, Short.MAX_VALUE);
@@ -213,85 +246,156 @@ public class ERDPreferencePage extends AbstractPrefPage implements IWorkbenchPre
     @Override
     protected void performDefaults() {
         DBPPreferenceStore store = DBWorkbench.getPlatform().getPreferenceStore();
-        contentsShowViews.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_SHOW_VIEWS));
-        contentsShowPartitions.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_SHOW_PARTITIONS));
-        routingType.select(routerDescriptors.indexOf(routerRegistry.getActiveRouter()));
-        changeBorderColors.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_CHANGE_BORDER_COLORS));
-        notationType.select(notationDescriptors.indexOf(notationRegistry.getDefaultDescriptor()));
-        changeHeaderColors.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_CHANGE_HEADER_COLORS));
-        gridCheck.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_GRID_ENABLED));
-        snapCheck.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_GRID_SNAP_ENABLED));
-        spinnerGridWidth.setSelection(store.getDefaultInt(ERDUIConstants.PREF_GRID_WIDTH));
-        spinnerGridHeight.setSelection(store.getDefaultInt(ERDUIConstants.PREF_GRID_HEIGHT));
-        modeCombo.select(ERDUIConstants.PRINT_MODE_DEFAULT);
-        spinnerMarginTop.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
-        spinnerMarginBottom.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
-        spinnerMarginLeft.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
-        spinnerMarginRight.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
-        if (visibilityButtons.size() > 0) {
-            visibilityButtons.get(0).setSelection(true);
+
+        if (hasContentGroup()) {
+            contentsShowViews.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_SHOW_VIEWS));
+            contentsShowPartitions.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_SHOW_PARTITIONS));
         }
-        if (styleButtons.size() > 0) {
-            for (Button styleButton : styleButtons) {
-                styleButton.setSelection(false);
+
+        if (hasColorPrefGroup()) {
+            changeBorderColors.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_CHANGE_BORDER_COLORS));
+            changeHeaderColors.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_DIAGRAM_CHANGE_HEADER_COLORS));
+        }
+
+        if (hasGridGroup()) {
+            gridCheck.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_GRID_ENABLED));
+            snapCheck.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_GRID_SNAP_ENABLED));
+            spinnerGridWidth.setSelection(store.getDefaultInt(ERDUIConstants.PREF_GRID_WIDTH));
+            spinnerGridHeight.setSelection(store.getDefaultInt(ERDUIConstants.PREF_GRID_HEIGHT));
+        }
+
+        if (hasPrintGroup()) {
+            modeCombo.select(ERDUIConstants.PRINT_MODE_DEFAULT);
+            spinnerMarginTop.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
+            spinnerMarginBottom.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
+            spinnerMarginLeft.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
+            spinnerMarginRight.setSelection(ERDUIConstants.PRINT_MARGIN_DEFAULT);
+        }
+
+        if (hasAdvancedGroup()) {
+            routingType.select(routerDescriptors.indexOf(routerRegistry.getActiveRouter()));
+            notationType.select(notationDescriptors.indexOf(notationRegistry.getDefaultDescriptor()));
+            loadLazyDescriptions.setSelection(store.getDefaultBoolean(ERDUIConstants.PREF_LOAD_LAZY_DESCRIPTIONS));
+        }
+
+        if (hasVisibilityGroup()) {
+            if (!visibilityButtons.isEmpty()) {
+                visibilityButtons.getFirst().setSelection(true);
             }
-            styleButtons.get(0).setSelection(true);
+        }
+        if (hasStyleGroup()) {
+            // Style settings
+            if (!styleButtons.isEmpty()) {
+                for (Button styleButton : styleButtons) {
+                    styleButton.setSelection(false);
+                }
+                styleButtons.getFirst().setSelection(true);
+            }
         }
         super.performDefaults();
     }
 
     @Override
-    public boolean performOk()
-    {
+    public boolean performOk() {
         DBPPreferenceStore store = ERDUIActivator.getDefault().getPreferences();
-        store.setValue(ERDUIConstants.PREF_DIAGRAM_SHOW_VIEWS, contentsShowViews.getSelection());
-        store.setValue(ERDUIConstants.PREF_DIAGRAM_SHOW_PARTITIONS, contentsShowPartitions.getSelection());
-        ERDConnectionRouterDescriptor connectionRouter = ERDConnectionRouterRegistry.getInstance()
-            .getDescriptorById(routingType.getText());
-        if (connectionRouter != null) {
-            ERDConnectionRouterRegistry.getInstance().setActiveRouter(connectionRouter);
-        }
-        ERDNotationDescriptor erdNotation = ERDNotationRegistry.getInstance().getDescriptorByName(notationType.getText());
-        if (erdNotation != null) {
-            ERDNotationRegistry.getInstance().setActiveDescriptor(erdNotation);
-        }
-        store.setValue(ERDUIConstants.PREF_DIAGRAM_CHANGE_BORDER_COLORS, changeBorderColors.getSelection());
-        store.setValue(ERDUIConstants.PREF_DIAGRAM_CHANGE_HEADER_COLORS, changeHeaderColors.getSelection());
-        store.setValue(ERDUIConstants.PREF_GRID_ENABLED, gridCheck.getSelection());
-        store.setValue(ERDUIConstants.PREF_GRID_SNAP_ENABLED, snapCheck.getSelection());
-        store.setValue(ERDUIConstants.PREF_GRID_WIDTH, spinnerGridWidth.getSelection());
-        store.setValue(ERDUIConstants.PREF_GRID_HEIGHT, spinnerGridHeight.getSelection());
 
-        int pageMode;
-        switch (modeCombo.getSelectionIndex()) {
-            case 1: pageMode = PrintFigureOperation.FIT_PAGE; break;
-            case 2: pageMode = PrintFigureOperation.FIT_WIDTH; break;
-            case 3: pageMode = PrintFigureOperation.FIT_HEIGHT; break;
-            default: pageMode = PrintFigureOperation.TILE; break;
+        if (hasContentGroup()) {
+            store.setValue(ERDUIConstants.PREF_DIAGRAM_SHOW_VIEWS, contentsShowViews.getSelection());
+            store.setValue(ERDUIConstants.PREF_DIAGRAM_SHOW_PARTITIONS, contentsShowPartitions.getSelection());
         }
-        store.setValue(ERDUIConstants.PREF_PRINT_PAGE_MODE, pageMode);
 
-        store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_TOP, spinnerMarginTop.getSelection());
-        store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_BOTTOM, spinnerMarginBottom.getSelection());
-        store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_LEFT, spinnerMarginLeft.getSelection());
-        store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_RIGHT, spinnerMarginRight.getSelection());
+        if (hasAdvancedGroup()) {
+            ERDConnectionRouterDescriptor connectionRouter = ERDConnectionRouterRegistry.getInstance()
+                .getDescriptorById(routingType.getText());
+            if (connectionRouter != null) {
+                ERDConnectionRouterRegistry.getInstance().setActiveRouter(connectionRouter);
+            }
+            ERDNotationDescriptor erdNotation = ERDNotationRegistry.getInstance().getDescriptorByName(notationType.getText());
+            if (erdNotation != null) {
+                ERDNotationRegistry.getInstance().setActiveDescriptor(erdNotation);
+            }
+            store.setValue(ERDUIConstants.PREF_LOAD_LAZY_DESCRIPTIONS, loadLazyDescriptions.getSelection());
+        }
 
-        for (Button radio : visibilityButtons) {
-            if (radio.getSelection()) {
-                ERDAttributeVisibility.setDefaultVisibility(store, (ERDAttributeVisibility) radio.getData());
-                break;
+        if (hasColorPrefGroup()) {
+            store.setValue(ERDUIConstants.PREF_DIAGRAM_CHANGE_BORDER_COLORS, changeBorderColors.getSelection());
+            store.setValue(ERDUIConstants.PREF_DIAGRAM_CHANGE_HEADER_COLORS, changeHeaderColors.getSelection());
+        }
+
+        if (hasGridGroup()) {
+            store.setValue(ERDUIConstants.PREF_GRID_ENABLED, gridCheck.getSelection());
+            store.setValue(ERDUIConstants.PREF_GRID_SNAP_ENABLED, snapCheck.getSelection());
+            store.setValue(ERDUIConstants.PREF_GRID_WIDTH, spinnerGridWidth.getSelection());
+            store.setValue(ERDUIConstants.PREF_GRID_HEIGHT, spinnerGridHeight.getSelection());
+        }
+
+        if (hasPrintGroup()) {
+            int pageMode;
+            switch (modeCombo.getSelectionIndex()) {
+                case 1:
+                    pageMode = PrintFigureOperation.FIT_PAGE;
+                    break;
+                case 2:
+                    pageMode = PrintFigureOperation.FIT_WIDTH;
+                    break;
+                case 3:
+                    pageMode = PrintFigureOperation.FIT_HEIGHT;
+                    break;
+                default:
+                    pageMode = PrintFigureOperation.TILE;
+                    break;
+            }
+            store.setValue(ERDUIConstants.PREF_PRINT_PAGE_MODE, pageMode);
+
+            store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_TOP, spinnerMarginTop.getSelection());
+            store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_BOTTOM, spinnerMarginBottom.getSelection());
+            store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_LEFT, spinnerMarginLeft.getSelection());
+            store.setValue(ERDUIConstants.PREF_PRINT_MARGIN_RIGHT, spinnerMarginRight.getSelection());
+        }
+
+        if (hasVisibilityGroup()) {
+            for (Button radio : visibilityButtons) {
+                if (radio.getSelection()) {
+                    ERDAttributeVisibility.setDefaultVisibility(store, (ERDAttributeVisibility) radio.getData());
+                    break;
+                }
             }
         }
-        List<ERDViewStyle> enabledStyles = new ArrayList<>();
-        for (Button check : styleButtons) {
-            if (check.getSelection()) {
-                enabledStyles.add((ERDViewStyle) check.getData());
-            }
-        }
-        ERDViewStyle.setDefaultStyles(store, enabledStyles.toArray(new ERDViewStyle[enabledStyles.size()]));
 
+        if (hasStyleGroup()) {
+            List<ERDViewStyle> enabledStyles = new ArrayList<>();
+            for (Button check : styleButtons) {
+                if (check.getSelection() && check.getData() instanceof ERDViewStyle data) {
+                    enabledStyles.add(data);
+                }
+            }
+            ERDViewStyle.setDefaultStyles(store, enabledStyles.toArray(new ERDViewStyle[0]));
+        }
+    
         PrefUtils.savePreferenceStore(store);
+    
+        return true;
+    }
 
+    protected boolean hasContentGroup() {
+        return true;
+    }
+    protected boolean hasColorPrefGroup() {
+        return true;
+    }
+    protected boolean hasVisibilityGroup() {
+        return true;
+    }
+    protected boolean hasStyleGroup() {
+        return true;
+    }
+    protected boolean hasGridGroup() {
+        return true;
+    }
+    protected boolean hasPrintGroup() {
+        return true;
+    }
+    protected boolean hasAdvancedGroup() {
         return true;
     }
 
